# dathos-game-engine

./: .rubocop.yml  Cargo.toml  Gemfile  README.md  rustfmt.toml
src/: engine.rs  ext.rs  lib.rs  modules.rs
src/ext/: rb_ext.rs  rotation_ext.rs  vector_ext.rs
src/modules/: core.rs  draw.rs
src/modules/core/: color.rs  coroutines.rs  game.rs  game_object.rs  game_utils.rb  input.rs  rotation.rs  transform.rs  vector.rs  wait.rs
src/modules/draw/: font_loader.rs  generic_vs.glsl  primitive.rs  primitive_fs.glsl  ruby.rs  sprite.rs  sprite_fs.glsl  spritesheet_loader.rs  text.rs
