[package]
name = "dathos-engine"
version = "0.1.0"
authors = ["Brian West <brian@bwest.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = ">=1.2"
futures = ">=0.3.1"
futures-util = "*"
glyph_brush = "^0.6"
image = "^0.23"
itertools = "^0.9"
lazy_static = "^1.4"
luminance = "0.39.0"
luminance-derive = "0.5.3"
luminance-glfw = "0.12.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
nalgebra = { version = "*", features = ["serde-serialize", "mint"] }
quanta = "0.4.1"
reqwest = "*"
rodio = "^0.11"
rutie = "^0.7"
slack = "^0.23"
